# Crew-AI

./: .gitignore
Debate_AI/debate/: pyproject.toml
Debate_AI/debate/output/: decide.md  oppose.md  propose.md
Debate_AI/debate/src/debate/: crew.py  main.py
FinancialResearcher_AI/financialresearcher_ai/: README.md  pyproject.toml
FinancialResearcher_AI/financialresearcher_ai/src/financialresearcher_ai/: crew.py  main.py
FinancialResearcher_AI/financialresearcher_ai/src/financialresearcher_ai/config/: agents.yaml  tasks.yaml
coder/: pyproject.toml  requirements.txt
coder/output/: code_and_output.txt
coder/src/coder/: crew.py  main.py
coder/src/coder/config/: agents.yaml  tasks.yaml
engneering_team/engineering_team/: pyproject.toml
engneering_team/engineering_team/src/engineering_team/: main.py
engneering_team/engineering_team/src/engineering_team/config/: agents.yaml  tasks.yaml
stock_picker/: README.md  pyproject.toml
