[project]
name = "financialresearcher_ai"
version = "0.1.0"
description = "FinancialResearcher_AI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic>=0.78.0",
    "crewai[tools]==1.8.1",
    "litellm==1.49.5",
]

[project.scripts]
financialresearcher_ai = "financialresearcher_ai.main:run"
run_crew = "financialresearcher_ai.main:run"
train = "financialresearcher_ai.main:train"
replay = "financialresearcher_ai.main:replay"
test = "financialresearcher_ai.main:test"
run_with_trigger = "financialresearcher_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
